--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                             class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                         </svg> -->
-                        <img src="logo (2).png" style="width: 100px;" alt="">
+                        <img src=" gym logo.png" style="width: 100px;" alt="">
 
                         <span class="ml-3 text-xl">MB -Fitness</span>
                     </a>
