--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                     </svg>-->
                     
-                      <img src="logo (2).png" style="width: 100px;" alt="">
+                      <img src="gym logo.png" style="width: 100px;" alt="">
                     
                     <!-- <img src="https://img.icons8.com/ios-glyphs/30/000000/dumbbell.png"/> -->
                     <span class="ml-3 text-xl">MB-Fitness</span>
