--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                     </svg>-->
                     
-                      <img src="gym logo.png" style="width: 100px;" alt="">
+                      <img src="gym logo.png" style="width: 50px;" alt="">
                     
                     <!-- <img src="https://img.icons8.com/ios-glyphs/30/000000/dumbbell.png"/> -->
                     <span class="ml-3 text-xl">MB-Fitness</span>
@@ -55,8 +55,10 @@
             </div>
         </header>
         <div class="line">
-            <p>MB-Fitness Institute:- Mumbai:- 9029002873, Pune:- 8411907222, Delhi:- 9560044981, Other Cities:-
-                9560044981</p>
+            <marquee width="100%" direction="right">
+                MB-Fitness Institute:- Mumbai:- 9029002873, Pune:- 8411907222, Delhi:- 9560044981, Other Cities:-
+                9560044981
+            </marquee>
         </div>
 
         <section class="text-gray-600 body-font" id="wall">
@@ -433,7 +435,7 @@
                             class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
                             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
                         </svg> -->
-                        <img src=" gym logo.png" style="width: 100px;" alt="">
+                        <img src=" gym logo.png" style="width: 50px;" alt="">
 
                         <span class="ml-3 text-xl">MB -Fitness</span>
                     </a>
