--- a/index.html
+++ b/index.html
@@ -238,12 +238,9 @@
                             <span class="mt-1 text-white-500 text-sm">12 Jun 2019</span>
                         </div>
                         <div class="md:flex-grow">
-                            <h2 class="text-2xl font-medium text-white-900 title-font mb-2">Bitters hashtag waistcoat
-                                fashion axe chia unicorn</h2>
-                            <p class="leading-relaxed">Glossier echo park pug, church-key sartorial biodiesel
-                                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon party messenger bag
-                                selfies, poke vaporware kombucha lumbersexual pork belly polaroid hoodie portland craft
-                                beer.</p>
+                            <h2 class="text-2xl font-medium text-white-900 title-font mb-2">TRANSFORM: Health Equity
+In partnership with VolunteerMatch, Healthline is launching Transform Today</h2>
+                            <p class="leading-relaxed"> — a local search tool where you can find opportunities to fight health inequities in your community, today.Like many working women, you may struggle with finding time to exercise and seeing results that will make you want to stick with your workout program. Here’s where The Balanced Life may help. While you have the option of signing up for a membership with exclusive Pilates videos with the program’s founder, Robin, you can also find a lot of free tips on her blog..</p>
                             <a class="text-indigo-500 inline-flex items-center mt-4">Learn More
                                 <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -259,12 +256,9 @@
                             <span class="mt-1 text-white-500 text-sm">12 Jun 2019</span>
                         </div>
                         <div class="md:flex-grow">
-                            <h2 class="text-2xl font-medium text-white-900 title-font mb-2">Meditation bushwick direct
-                                trade taxidermy shaman</h2>
-                            <p class="leading-relaxed">Glossier echo park pug, church-key sartorial biodiesel
-                                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon party messenger bag
-                                selfies, poke vaporware kombucha lumbersexual pork belly polaroid hoodie portland craft
-                                beer.</p>
+                            <h2 class="text-2xl font-medium text-white-900 title-font mb-2">MYou Must Get Healthy
+You Must Get Healthy is a Health and Fitness blog</h2>
+                            <p class="leading-relaxed"> . It covers a variety of topics aimed to help you on your fitness journey. We’ve always enjoyed their at home workout ideas (especially for heavily polluted days)..</p>
                             <a class="text-indigo-500 inline-flex items-center mt-4">Learn More
                                 <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -280,12 +274,8 @@
                             <span class="text-sm text-white-500">12 Jun 2019</span>
                         </div>
                         <div class="md:flex-grow">
-                            <h2 class="text-2xl font-medium text-white-900 title-font mb-2">Woke master cleanse drinking
-                                vinegar salvia</h2>
-                            <p class="leading-relaxed">Glossier echo park pug, church-key sartorial biodiesel
-                                vexillologist pop-up snackwave ramps cornhole. Marfa 3 wolf moon party messenger bag
-                                selfies, poke vaporware kombucha lumbersexual pork belly polaroid hoodie portland craft
-                                beer.</p>
+                            <h2 class="text-2xl font-medium text-white-900 title-font mb-2">What The Body-Acceptance Movement Doesn't Want You to Know!</h2>
+                            <p class="leading-relaxed">People think body confidence is about liking the way we look, but it's actually about liking ourselves no matter *how* we look.</p>
                             <a class="text-indigo-500 inline-flex items-center mt-4">Learn More
                                 <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
                                     fill="none" stroke-linecap="round" stroke-linejoin="round">
